# SquintBoy

./: .gitignore  .gitmodules  LICENSE  THIRD_PARTY_LICENSES.md  install.sh  local.properties  play-store-strategy.md  settings.gradle.kts
.claude/: settings.local.json
emulator-core/: build.gradle.kts
emulator-core/src/main/cpp/: CMakeLists.txt  audio_bridge.cpp  audio_bridge.h  mgba_jni.cpp
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
mobile/: build.gradle.kts  proguard-rules.pro
mobile/src/androidTest/java/com/anaglych/squintboyadvance/: ExampleInstrumentedTest.kt
mobile/src/androidTest/java/com/example/squintboyadvance/: ExampleInstrumentedTest.kt
mobile/src/main/: AndroidManifest.xml
mobile/src/main/java/com/anaglych/squintboyadvance/: MainActivity.kt  MobileBillingManager.kt  MobileEntitlementCache.kt  MobileListenerService.kt  PurchaseRequestSignal.kt  ReviewRequestSignal.kt  (+1 more)
mobile/src/main/res/drawable/: ic_launcher_background.xml
mobile/src/main/res/layout/: activity_main.xml  fragment_gamepad_pairing.xml  fragment_rom_upload.xml  fragment_save_manager.xml  item_rom.xml  item_save.xml
mobile/src/main/res/menu/: bottom_nav_menu.xml
mobile/src/main/res/navigation/: mobile_nav_graph.xml
mobile/src/main/res/values/: strings.xml  themes.xml  wear.xml
mobile/src/main/res/values-night/: themes.xml
mobile/src/main/res/xml/: file_paths.xml
shared/: build.gradle.kts
wear/: build.gradle.kts  proguard-rules.pro
wear/src/main/: AndroidManifest.xml
wear/src/main/res/values/: strings.xml  wear.xml
(+149 files in other folders)
